--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -88,7 +88,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
   <RelativeLayout
     android:background="@color/background_very_light_grey"
-      android:layout_width="match_parent"
+    android:id="@+id/RelativeLayout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -132,6 +133,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/cameraMonitorViewId"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -139,6 +141,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
             android:orientation="vertical"
             />
         <FrameLayout
+            android:id="@+id/tfodMonitorViewId"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="0dp"
